--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "compression": "^1.7.4",
     "config": "^3.3.1",
     "express": "^4.17.1",
@@ -11,7 +12,9 @@
     "express-rate-limit": "^5.1.1",
     "helmet": "^3.22.0",
     "http-status": "^1.4.2",
+    "joi-objectid": "^3.0.1",
     "mongoose": "^5.9.6",
+    "validator": "^13.0.0",
     "winston": "^3.2.1",
     "xss-clean": "^0.1.1"
   },
