--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "main": "index.js",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "bcrypt": "^4.0.1",
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "config": "^3.3.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.0",
     "express-rate-limit": "^5.1.1",
     "helmet": "^3.22.0",
     "http-status": "^1.4.2",
     "joi-objectid": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.6",
+    "morgan": "^1.10.0",
     "validator": "^13.0.0",
     "winston": "^3.2.1",
     "xss-clean": "^0.1.1"
