--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,9 @@
     "start": "nodemon ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "12.13.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Hassan950/Login-Signup.git"
