--- a/api/package.json
+++ b/api/package.json
@@ -25,7 +25,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "nodemon ./src/server.js",
+    "start": "node ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
