--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,13 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
+    "heroku-postbuild": "npm run build",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
+  },
+  "engines": {
+    "node": "12.13.0"
   },
   "dependencies": {
     "@nuxtjs/auth": "^4.9.0",
